--- a/contact.html
+++ b/contact.html
@@ -10,5 +10,6 @@
     <h2>Cell number: 0789452213</h2>
     <h2>Whatsapp: 0823445768</h2>
     <h2>Twitter: mzi_tobo77</h2>
+    <a href="./index.html">Home Page</a>
   </body>
 </html>
