--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
             <li>I like being outdoor.</li>
         </li>
       </ul>
+      <a href="./contact.html">Contact Page</a>
   </body>
 </html>
