--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
+  <body style="background-image: url(./pexels-jean-van-der-meulen-1543444.jpg">
     <h2>Cell number: 0789452213</h2>
     <h2>Whatsapp: 0823445768</h2>
     <h2>Twitter: mzi_tobo77</h2>
-    <a href="./index.html">Home Page</a>
+    <a style="color: white" href="./index.html">Home Page</a>
   </body>
 </html>
