--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <title>Holiday Destination</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
   </head>
   <body>
+      <h1>Cape Town</h1>
+      
+
+  
     <img
       src="pexels-xue-guangjian-1687845.jpg"
-      alt="Girl in a jacket"
-      width="800"
-      height="600"
-    />
+      alt="Girl in a jacket"/>
     <br />
     <br />
     <ul>
